# rustflow

./: .gitignore  Cargo.toml  README.md  build.rs  config-stdout.yaml  config.yaml
benches/: decoder_bench.rs
proto/: flow.proto
src/: config.rs  lib.rs  main.rs  utils.rs
src/decoders/: mod.rs  netflow.rs  sflow.rs  utils.rs
src/format/: binary.rs  json.rs  mod.rs  text.rs
src/producer/: mod.rs  proto.rs  raw.rs
src/transport/: file.rs  kafka.rs  mod.rs
