[package]
name = "rustflow"
version = "0.1.0"
edition = "2021"
authors = ["RustFlow Team"]
description = "A NetFlow/IPFIX/sFlow collector in Rust"
license = "MIT"
repository = "https://github.com/rustflow/rustflow"

[lib]
name = "rustflow"
path = "src/lib.rs"

[[bin]]
name = "rustflow"
path = "src/main.rs"

[build-dependencies]
prost-build = "0.12"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Networking
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.12"
prost-types = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Configuration
config = "0.13"
serde_yaml = "0.9"

# HTTP server for metrics
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Metrics
prometheus = "0.13"
prometheus-client = "0.22"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Binary encoding/decoding
byteorder = "1.4"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# System information
num_cpus = "1.0"

# Hex encoding
hex = "0.4"

# Optional: Kafka support
rdkafka = { version = "0.34", optional = true }

# Optional: File transport
tokio-fs = "0.1"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] } 